# winter-supplement-rules-engine

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-test.yml
rules_engine/: engine.py  mtqq_wrapper.py  rules.py
tests/: test_client.py  test_engine.py  test_rules.py
winter_supp_rules_engine/: engine.py
