[tool.poetry]
name = "winter-supplement-rule-engine"
version = "0.1.0"
description = ""
authors = ["Yurui-Feng <yurifeng@bu.edu>"]
readme = "README.md"
packages = [
    { include = "rules_engine"}
]

[tool.poetry.dependencies]
python = "^3.12"
paho-mqtt = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
